--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
   </nav>
   </header>
+<main>
+
 
   <figure>
     <img src="images/beets.jpg" alt="beets">
@@ -55,7 +57,24 @@
   <dt>Protein</dt>
   <dd><data value="1.68">1.68</data></dd>
 </dl>
-</p>
+</main>
+
+<aside class="class">
+  <h2>Tags</h2>
+  <ul>
+    <li>Crismon</li>
+    <li>Awesome</li>
+    <li>Pickle-able</li>
+    <li>Vegetable!</li>
+    <li>Delicious</li>
+  </ul>
+<footer>
+  <small>
+    Source <a href="Wikipedia"></a> last modified <time>Aug 30, 2014</time>
+  </small>
+  </footer>
+</aside>
+
 
 
 
