--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
   </ol>
   <h2>Nutritional value</h2>
   <p>Serving size: <data value="100">100g</data>
-  <dl>
-    <dt>Energy:</dt>
-    <dd><data value="180">180 kJ</data></dd
-    <dt>Carbohydrates:</dt>
-    <dd><data value="9.96">9.96 g</data></dd>
-    <dt>Fat:</dt>
-    <dd><data value="0.18">0.18 g</data></dd>
-    <dt>Protein</dt>
-    <dd><data value="1.68">1.68 g</data></dd>
-  </dl>
+    <dl class="class">
+          <dt>Energy:</dt>
+          <dd><data value="180">180 kJ</data></dd>
+          <dt>Carbohydrates:</dt>
+          <dd><data value="9.96">9.96 g</data></dd>
+          <dt>Fat:</dt>
+          <dd><data value="0.18">0.18 g</data></dd>
+          <dt>Protein:</dt>
+          <dd><data value="1.68">1.68 g</data></dd>
+        </dl>
 
 </main>
 
