--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <li>Early Red</li>
   </ol>
   <h2>Nutritional value</h2>
-  <p>Serving size: <data value="100">100g</data>
+  <p>Serving size: <data value="100">100g</data></p>
     <dl class="class">
           <dt>Energy:</dt>
           <dd><data value="180">180 kJ</data></dd>
