--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <nav>
     <ol>
       <li><a href="#">Common varieties</a></li>
-      <li><a href="#">Nutritional information</a>
+      <li><a href="#">Nutritional information</a></li>
       <li><a href="#">Tags</a></li>
     </ol>
 
