--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
   <nav>
     <ol>
       <li><a href="#">Common varieties</a></li>
-      <li><a href="#">Nutritional information</a></li>
+      <li><a href="#">Nutritional information</a>
       <li><a href="#">Tags</a></li>
     </ol>
-
 
   </nav>
   </header>
